--- a/code/chart_notebook.ipynb
+++ b/code/chart_notebook.ipynb
@@ -204,7 +204,7 @@
    "metadata": {},
    "source": [
     "### Visualize Distributions\n",
-    "#### How long are Phish performances?"
+    "##### How long are Phish performances?"
    ]
   },
   {
@@ -281,7 +281,7 @@
    "metadata": {},
    "source": [
     "### Visualize Time\n",
-    "#### When do Phish performances generally happen? "
+    "##### When do Phish performances generally happen? "
    ]
   },
   {
